# spotify-playlist-to-mp3

./: .gitignore  README.md  default.env  downloader.py  pyproject.toml
